[package]
name = "soter"
version = "0.1.0"
authors = ["Christopher Meiklejohn <meiklejc@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="=0.2.13",features = ["stream", "macros"]}
futures = "0.3"
lazy_static = "1.4.0"
once_cell = "1.4.0"
tokio-timer = "0.2.13"
async-std = "1.6.2"
rand = "0.6.0"

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
name = "rand"
path = "src/rand.rs"

[[bin]]
name = "race1"
path = "src/race1.rs"

[[bin]]
name = "race1-sync"
path = "src/race1-sync.rs"

[[bin]]
name = "race1-async"
path = "src/race1-async.rs"

[[bin]]
name = "race2-sync"
path = "src/race2-sync.rs"

[[bin]]
name = "race2-async"
path = "src/race2-async.rs"

[[bin]]
name = "drop"
path = "src/drop.rs"